Murphy System/outputs/workspace_output_1769204899_5975.txt
/workspace/main_script.js:1028
                            if (data.results &amp;&amp; data.results.length > 0) {
                                                 ^

SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.6
